# KalkulatorStartuRakiety

./: LICENSE  README.md  rocket-thrust-calculator.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.1/: package.cache  rocket-thrust-calculator-0.1.0.0-inplace.conf
src/: GraphGenerator.hs  RocketThrust.hs
